--- a/angularjs-route/pages/quan-ly.html
+++ b/angularjs-route/pages/quan-ly.html
@@ -117,6 +117,7 @@
                 <td>{{tung_ny.id}}</td>
                 <td>{{tung_ny.ten}}</td>
                 <td>{{tung_ny.tuoi}}</td>
+                <td><img src="{{tung_ny.img}}" width="100" alt=""></td>
                 <!-- Toán tử 3 ngôi nhưng 3 trường hợp -->
                 <td>{{tung_ny.trang_thai == 1
                     ? 'Đang yêu'
